--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ body {
   color: #000;
   transition: background-color 300ms ease-in-out;
   margin: 20px auto;
+  border-radius: 5px;
 }
 
 .working .pomodoro button {
